# code_problems

./: README.md  preload.py  problems_list.md  pyproject.toml
src/code_problems/: code_rascunho.txt
src/code_problems/bee_crowd/: atalhos_bloggo.py  diferenca.py  media_1.py  soma_simples.py
src/utils/: create_problem_data.py  remove_extra_spaces.py
tests/test_code_wars/: conftest.py  test_area_or_perimeter.py  test_array_diff.py  test_array_element_parity.py  test_array_info.py  test_band_name_generator.py  test_batman_quotes.py  test_best_travel.py  test_boolean_logic_from_scratch.py  test_build_a_pile_of_cubes.py  test_codewars_style_ranking_system.py  test_colored_hexes.py  test_convert_number_to_reversed_array_of_digits.py  test_count_odd_numbers.py  test_counting_sheep.py  test_create_problem_data.py  test_decade_80_s_kids_1_how_many_licks_does_it_take.py  test_decode_morse.py  test_drunk_friend.py  test_easy_line.py  test_easy_time_convert.py  test_elapsed_seconds.py  test_ensure_question.py  test_exclamation_marks_series.py  test_factorial.py  test_fibonacci_tribonacci_and_friends.py  test_find_the_area_of_the_rectangle.py  test_find_the_integral.py  test_find_the_odd.py  test_find_the_odd_int.py  test_find_twins.py  test_find_your_villain_name.py  test_generating_numbers_from_digits_1.py  test_grader.py  test_highest_score.py  test_is_the_string_uppercase.py  test_is_this_a_triangle.py  test_knight_position.py  test_lucas_numbers.py  test_most_digits.py  (+27 more)
tests/tests_leetcode/: test_find_missing_and_repeated_values.py
(+64 files in other folders)
